--- a/index.html
+++ b/index.html
@@ -15,25 +15,21 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <script type="text/babel">
+    function App() {
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        // setCounter(counter + 1);
+        setCounter((current) => current + 1);
+      };
+      return (
+        <div>
+          <h3>Total Click:{counter}</h3>
+          <button onClick={onClick}>Click me!</button>
+        </div>
+      );
+    }
+
     const root = document.getElementById("root");
-
-    let counter = 0;
-
-    function render() {
-      ReactDOM.render(<Container />, root);
-    }
-
-    function countUp() {
-      counter = counter + 1;
-      render();
-    }
-
-    const Container = () => (
-      <div>
-        <h3>Total Click:{counter}</h3>
-        <button onClick={countUp}>Click me!</button>
-      </div>
-    );
-    render();
+    ReactDOM.render(<App />, root);
   </script>
 </html>
